<resources>
    <string name="app_name">Corners</string>
    <string name="app_name2">Уголки</string>
    <string name="background">background</string>
    <string name="todo">TODO</string>
    <string name="start_and_enjoy">Start</string>
    <string name="textonview">Hello from Dmitriy Nokhrin</string>
    <string name="greeting">Стартовый экран</string>
    <string name="title_activity_two">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="button_level">Выбор уровня</string>
    <string name="button_multi_player">Совместная игра</string>
    <string name="button_corners">Классические уголки</string>
    <string name="button_create_level">Создать уровень</string>
    <string name="button_shop">Магазин</string>
    <string name="button_settings">Настройки</string>
    <string name="button_menu">Меню</string>
    <string name="button_restart">Рестарт</string>
    <string name="button_return_levels">Выбрать уровень</string>
    <string name="button_restart_level">Рестарт</string>
    <string name="button_next_level">Следующий уровень</string>
    <string name="button_number_level1">1</string>
    <string name="button_number_level2">2</string>
    <string name="button_number_level3">3</string>
    <string name="button_number_level4">4</string>
    <string name="button_number_level5">5</string>
    <string name="button_number_level6">6</string>
    <string name="button_number_level7">7</string>
    <string name="button_number_level8">8</string>
    <string name="button_number_level9">9</string>
    <string name="button_number_level10">10</string>
    <string name="button_number_level11">11</string>
    <string name="button_number_level12">12</string>
    <string name="button_number_level13">13</string>
    <string name="image_field_4x4">chess field on 4x4</string>
    <string name="choise_level">Выбор уровня</string>
    <string name="title_activity_classic">FullscreenActivity</string>
    <string name="title_activity_start">Уголки</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="title_activity_levels">FullscreenActivity</string>
    <string name="text_in_level_layout">Скоро здесь появятся уровни</string>
    <string name="text_count_move">Осталось ходов : 5</string>
    <string name="text_multi_1">Начинаем че та делать</string>
    <string name="text_player_Name">Введите имя игрока</string>
    <string name="text_view_room_name">Игра загружается</string>
    <string name="button_create_player">Создать игрока</string>
    <string name="button_create_room">Создать игру</string>
    <string name="button_join_room">Присоединиться к игре</string>
    <string name="edit_text_create_room">  придумайте имя для игры</string>
    <string name="button_multi_3">Мульти 3</string>
    <string name="title_activity_multiplayer">FullscreenActivity</string>
    <string name="title_activity_multi2">FullscreenActivity</string>
    <string name="title_activity_multi3_game">FullscreenActivity</string>
    <string name="todo1">TODO1</string>
    <string name="title_activity_create_level">FullscreenActivity</string>
    <string name="number_level">Номер уровня</string>
    <string name="size_of_field">Размер поля + 1</string>
    <string name="count_move">Доступных ходов</string>
    <string name="count_point">Количество целевых точек</string>
    <string name="white_i">Позиция пешки Y</string>
    <string name="white_j">Позиция пешки X</string>
    <string name="stone_i">Позиция камня Y</string>
    <string name="stone_j">Позиция камня X</string>
    <string name="point_i">Позиция целевой точки Y</string>
    <string name="point_j">Позиция целевой точки X</string>
    <string name="title_activity_game_level">FullscreenActivity</string>
    <string name="count_move_level">Осталось ходов: %d</string>
    <string name="moves_over">Ходы кончились :(</string>
    <string name="end_of_game">Вы прошли все уровни на отлично, спасибо что играли в мою игру,
        вы можете оставить отзыв и пожелания на странице игры в PlayMarket</string>
    <string name="game_continues">У вас остались не пройденные уровни)</string>

</resources>