<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
android:id="@+id/layoutCreateLevel"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
android:orientation="vertical"
    android:background="@drawable/board_bg">
    <EditText
        android:id="@+id/NumberLevel"
        android:hint="@string/number_level"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </EditText>

    <EditText
        android:id="@+id/etSizeOfField"
        android:hint="@string/size_of_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </EditText>

    <EditText
        android:id="@+id/etCountMove"
        android:hint="@string/count_move"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </EditText>
    <EditText
        android:id="@+id/etCountPoint"
        android:hint="@string/count_point"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </EditText>
    <EditText
        android:id="@+id/etPositionWhiteI"
        android:hint="@string/white_i"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </EditText>
    <EditText
        android:id="@+id/etPositionWhiteJ"
        android:hint="@string/white_j"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </EditText>
    <EditText
        android:id="@+id/etPositionStoneI"
        android:hint="@string/stone_i"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </EditText>
    <EditText
        android:id="@+id/etPositionStoneJ"
        android:hint="@string/stone_j"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </EditText>
    <EditText
        android:id="@+id/etPositionPointI"
        android:hint="@string/point_i"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </EditText>
    <EditText
        android:id="@+id/etPositionPointJ"
        android:hint="@string/point_j"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </EditText>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btnUpd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Update">
        </Button>
        <Button
            android:id="@+id/btnDel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Delete">
        </Button>
    </LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <Button
        android:id="@+id/btnAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Add">
    </Button>
    <Button
        android:id="@+id/btnRead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Read">
    </Button>
    <Button
        android:id="@+id/btnClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Clear">
    </Button>
</LinearLayout>
    <ListView
        android:id="@+id/lvMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </ListView>
</LinearLayout>