<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstrainLayoutRooms"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#249E4D"
    android:theme="@style/ThemeOverlay.Corners.FullscreenContainer"
    tools:context=".multiplayer.ActivityRooms" >

    <Button
        android:id="@+id/buttonCreateRoom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_create_room"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.907" />

    <Button
        android:id="@+id/buttonJoinRoom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_join_room"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.114" />

    <ListView
        android:id="@+id/listViewRooms"
        android:layout_width="283dp"
        android:layout_height="528dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.539"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.822" />

    <EditText
        android:id="@+id/editTextCreateRoom"
        android:layout_width="294dp"
        android:layout_height="45dp"
        android:ems="10"
        android:hint="@string/edit_text_create_room"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.801" />

</androidx.constraintlayout.widget.ConstraintLayout>