<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstrainLayoutLevels"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_blue"
    android:theme="@style/ThemeOverlay.Corners.FullscreenContainer"
    tools:context=".levels.ActivityLevels" >

    <FrameLayout
        android:id="@+id/frameLayoutLevels"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </FrameLayout>

    <Button
        android:id="@+id/buttonLevel3"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:background="@drawable/button_number_level"
        android:fontFamily="@font/aclonica"
        android:freezesText="false"
        android:hapticFeedbackEnabled="false"
        android:text="@string/button_number_level3"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#FFFFFF"
        android:textIsSelectable="false"
        android:textSize="45sp"
        android:visibility="visible"
        app:backgroundTint="@color/white"
        app:backgroundTintMode="multiply"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.909"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.115" />

    <Button
        android:id="@+id/buttonLevel4"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:background="@drawable/button_number_level"
        android:fontFamily="@font/aclonica"
        android:freezesText="false"
        android:hapticFeedbackEnabled="false"
        android:text="@string/button_number_level4"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#FFFFFF"
        android:textIsSelectable="false"
        android:textSize="45sp"
        android:visibility="visible"
        app:backgroundTint="@color/white"
        app:backgroundTintMode="multiply"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.118"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.304" />

    <Button
        android:id="@+id/buttonLevel5"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:background="@drawable/button_number_level"
        android:fontFamily="@font/aclonica"
        android:freezesText="false"
        android:hapticFeedbackEnabled="false"
        android:text="@string/button_number_level5"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#FFFFFF"
        android:textIsSelectable="false"
        android:textSize="45sp"
        android:visibility="visible"
        app:backgroundTint="@color/white"
        app:backgroundTintMode="multiply"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.304" />

    <Button
        android:id="@+id/buttonLevel6"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:background="@drawable/button_number_level"
        android:fontFamily="@font/aclonica"
        android:freezesText="false"
        android:hapticFeedbackEnabled="false"
        android:text="@string/button_number_level6"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#FFFFFF"
        android:textIsSelectable="false"
        android:textSize="45sp"
        android:visibility="visible"
        app:backgroundTint="@color/white"
        app:backgroundTintMode="multiply"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.909"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.304" />

    <Button
        android:id="@+id/buttonLevel2"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:background="@drawable/button_number_level"
        android:fontFamily="@font/aclonica"
        android:freezesText="false"
        android:hapticFeedbackEnabled="false"
        android:text="@string/button_number_level2"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#FFFFFF"
        android:textIsSelectable="false"
        android:textSize="45sp"
        android:visibility="visible"
        app:backgroundTint="@color/white"
        app:backgroundTintMode="multiply"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.115" />


    <Button
        android:id="@+id/buttonMenu"
        android:layout_width="146dp"
        android:layout_height="55dp"
        android:background="@drawable/red_button11"
        android:fontFamily="@font/comfortaa_bold"
        android:freezesText="false"
        android:hapticFeedbackEnabled="false"
        android:text="@string/button_menu"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#FFFFFF"
        android:textIsSelectable="false"
        android:textSize="24sp"
        android:visibility="visible"
        app:backgroundTint="@color/white"
        app:backgroundTintMode="multiply"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.917" />

    <Button
        android:id="@+id/buttonLevel1"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:background="@drawable/button_number_level"
        android:fontFamily="@font/aclonica"
        android:freezesText="false"
        android:hapticFeedbackEnabled="false"
        android:text="@string/button_number_level1"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#FFFFFF"
        android:textIsSelectable="false"
        android:textSize="45sp"
        android:visibility="visible"
        app:backgroundTint="@color/white"
        app:backgroundTintMode="multiply"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.118"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.115" />


    <TextView
        android:id="@+id/textViewCountMove"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/comfortaa_bold"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.407"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.041" />

</androidx.constraintlayout.widget.ConstraintLayout>